# cabal-config

./: cabal-config.cabal
src/: Main.hs
