name:                cabal-config
version:             0.1.0.0
synopsis:            Fragile extraction of linker flags for named packages.
description:         Program similar in spirit to `pkg-config --libs`. Produces 
                     linker flags to pull in the latest locally installed 
                     version of all requested packages.
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           Copyright (C) 2013 Anthony Cowley
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable cabal-config
  main-is:             Main.hs
  build-depends:       base >= 4.6 && < 5, Cabal >= 1.17, directory >= 1.2, 
                       filepath >= 1.3, optparse-applicative >= 0.5.2
  hs-source-dirs:      src
  default-language:    Haskell2010